--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
     tab-size: 4;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     display: block;
+    scroll-behavior: smooth;
 }
 
 *, ::before, ::after {
@@ -66,6 +67,8 @@ section{
     transform: none;
 }
 
+/* home page */
+
 .nav{
     /* display: none; */
     flex: 1 1 0%;
@@ -81,4 +84,12 @@ section{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.nav__links{
+    list-style-type: none;
+}
+
+.nav__links li:hover{
+    list-style: none;
 }
