--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ html {
     --tw-numeric-figure: var(--tw-empty,/*!*/ /*!*/);
     --tw-numeric-spacing: var(--tw-empty,/*!*/ /*!*/);
     --tw-numeric-fraction: var(--tw-empty,/*!*/ /*!*/);
-    --tw-ring-offset-shadow: 0 0 #0000;
-    --tw-ring-shadow: 0 0 #0000;
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
+    --tw-ring-offset-shadow: 0, 0, #0000;
+    --tw-ring-shadow: 0, 0, #0000;
+    --tw-shadow: 0, 0, #0000;
+    --tw-shadow-colored: 0, 0, #0000;
     --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
     --tw-ring-offset-width: 0px;
     --tw-ring-offset-color: #fff;
@@ -56,6 +56,7 @@ html {
     --tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
     --tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
     --tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
+    --color-text: var(#775ada)
 }
 
 body{
@@ -65,6 +66,15 @@ body{
 
 section{
     transform: none;
+}
+
+.app{
+    min-height: 100vh;
+    overflow: hidden;
+    padding: 2rem;
+    font-family: Inter, system-ui;
+    --tw-text-opacity: 1;
+    color: rgb(36 62 99 / var(--tw-text-opacity));
 }
 
 /* home page */
@@ -84,6 +94,39 @@ section{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.logo{
+    width: 40px;
+    height: 40px;
+    max-width: 100%;
+    margin: 0 12px 0 0;
+}
+
+.logo__link{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    border-bottom-width: 0px;
+    font-weight: 900;
+    margin-left: 0px !important;
+    font-size: 1.5rem !important;
+    text-decoration: none;
+}
+
+.logo__link:hover{
+    text-decoration: none;
+    color: #775ada;
+}
+
+.nav__links{
+    display: flex;
+}
+
+.nav__link{
+    display: flex;
+    justify-content: space-between;
+    padding-right: 15px;
 }
 
 li{
