--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html {
     --tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
     --tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
     --tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
-    --color-text: var(#775ada)
+    --color-text: #775ada
 }
 
 body{
@@ -75,6 +75,21 @@ section{
     font-family: Inter, system-ui;
     --tw-text-opacity: 1;
     color: rgb(36 62 99 / var(--tw-text-opacity));
+}
+
+a{
+    text-decoration: none;
+    position: relative;
+    color: #4d2dec;
+    transition: opacity 300ms ease;
+}
+
+li{
+    list-style-type: none;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 /* home page */
@@ -116,11 +131,12 @@ section{
 
 .logo__link:hover{
     text-decoration: none;
-    color: #775ada;
+    color: var(--color-text);
 }
 
 .nav__links{
     display: flex;
+    color: #0000;
 }
 
 .nav__link{
@@ -129,14 +145,30 @@ section{
     padding-right: 15px;
 }
 
-li{
-    list-style-type: none;
+.nav__link:hover{
+    color: var(--color-text);
 }
 
-a{
-    text-decoration: none;
+.link__hover-effect:after{
+    content: "";
+    position: absolute;
+    height: 3px;
+    background-color: black;
+    width: 0;
+    bottom: -3px;
+    right: 0;
+    transition: all 300ms;
 }
 
-a:hover{
-    text-decoration: underline;
+/* .link__hover-effect--white:after{
+    background-color: #fff;
+}
+
+.link__hover-effect--black:after{
+    background-color: #000;
+} */
+
+.link__hover-effect:hover:after{
+    width: 100%;
+    left: 0;
 }
