--- a/style.css
+++ b/style.css
@@ -68,13 +68,15 @@ section{
     transform: none;
 }
 
+/* reusable */
+
 .app{
     min-height: 100vh;
     overflow: hidden;
     padding: 2rem;
     font-family: Inter, system-ui;
     --tw-text-opacity: 1;
-    color: rgb(36 62 99 / var(--tw-text-opacity));
+    color: rgb(36, 62, 99 / var(--tw-text-opacity));
 }
 
 a{
@@ -159,14 +161,6 @@ a:hover{
     right: 0;
     transition: all 300ms;
 }
-
-/* .link__hover-effect--white:after{
-    background-color: #fff;
-}
-
-.link__hover-effect--black:after{
-    background-color: #000;
-} */
 
 .link__hover-effect:hover:after{
     width: 100%;
