--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ li{
     list-style-type: none;
 }
 
-/* a:hover{
-    text-decoration: underline;
-} */
+.purple{
+    color: #4d2dec;
+}
 
 /* home page */
 
@@ -151,18 +151,15 @@ li{
     color: var(--color-text);
 }
 
-/* .link__hover-effect:after{
-    content: "";
-    position: absolute;
-    height: 3px;
-    background-color: black;
-    width: 0;
-    bottom: -3px;
-    right: 0;
-    transition: all 300ms;
+/*  */
+
+.container{
+    width: 100%;
+    height: 100%;
 }
 
-.link__hover-effect:hover:after{
-    width: 80%;
-    left: 0;
-} */
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
