--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ section{
     transform: none;
 }
 
+blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
+    margin: 0px;
+}
+
 /* reusable */
 
 .app{
@@ -105,7 +109,7 @@ li{
     justify-content: space-between;
 }
 
-.row{
+.row__nav{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -153,13 +157,24 @@ li{
 
 /*  */
 
-.container{
+.TwoColumnWithInput__container{
     width: 100%;
     height: 100%;
 }
 
-.row{
-    width: 100%;
+.TwoColumnWithInput__Row{
+    /* width: 60%; */
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.TwoColumnWithInput__Title{
+    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 48px;
+    width: 533.33px;
+    height: 120px;
+    padding: 0;
+    margin-bottom: 30px;
 }
