--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ html {
     scroll-behavior: smooth;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: inherit;
+
 *, ::before, ::after {
     box-sizing: border-box;
     border-width: 0px;
@@ -101,7 +105,7 @@ li{
 /* home page */
 
 .nav{
-    /* display: none; */
+    display: none;
     flex: 1 1 0%;
     -webkit-box-align: center;
     align-items: center;
@@ -156,14 +160,10 @@ li{
 }
 
 /*  */
+ 
 
-.TwoColumnWithInput__container{
-    width: 100%;
-    height: 100%;
-}
-
-.TwoColumnWithInput__Row{
-    /* width: 60%; */
+/*.TwoColumnWithInput__Row{
+    width: 60%;
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -171,10 +171,30 @@ li{
 }
 
 .TwoColumnWithInput__Title{
-    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Inter, system-ui, 'Segoe UI', "Roboto", "Oxygen", "Ubuntu", "Cantarell", 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 48px;
+    font-weight: 700;
     width: 533.33px;
     height: 120px;
     padding: 0;
     margin-bottom: 30px;
+    line-height: 1.25;
+    --tw-text-opacity: 1;
+    color: rgb(26, 32, 44 / var(--tw-text-opacity));
 }
+
+.TwoColumnWithInput__text{
+    
+}
+
+.TwoColumnWithInput__bttn{
+
+}
+
+.TwoColumnWithInput__input__btn{
+
+}
+
+.TwoColumnWithInput__btn{
+    
+} */
