--- a/style.css
+++ b/style.css
@@ -72,9 +72,9 @@ section{
     transform: none;
 }
 
-blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
+/* blockquote, dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
     margin: 0px;
-}
+} */
 
 /* reusable */
 
