--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section{
     padding: 2rem;
     font-family: Inter, system-ui;
     --tw-text-opacity: 1;
-    color: rgb(36, 62, 99 / var(--tw-text-opacity));
+    color: rgb(36 62 99 / var(--tw-text-opacity));
 }
 
 a{
@@ -101,6 +101,16 @@ li{
 
 .purple{
     color: #4d2dec;
+}
+
+button, input, optgroup, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    font-weight: inherit;
+    line-height: inherit;
+    color: inherit;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* home page */
@@ -167,7 +177,7 @@ li{
     background-color: #7700ff;
     border: 2px solid #7700ff;
     border-radius: 10000px;
-    padding: 3px 15px;
+    padding: 5px 20px 5px 20px;
 }
 
 .nav__link--signup--btn:hover{
@@ -177,7 +187,6 @@ li{
 
 /*  */
  
-
 .TwoColumnWithInput__Row{
     width: 60%;
     max-width: 1200px;
@@ -196,7 +205,7 @@ li{
     margin-bottom: 30px;
     line-height: 1.25;
     --tw-text-opacity: 1;
-    color: rgb(26, 32, 44 / var(--tw-text-opacity));
+    color: rgb(26 32 44 / var(--tw-text-opacity));
 }
 
 .TwoColumnWithInput__text{
@@ -208,9 +217,36 @@ li{
 }
 
 .TwoColumnWithInput__input__btn{
-
+    width: 100%;
+    border-radius: 1000px;
+    border-width: 2px;
+    padding-left: 2rem;
+    font-weight: 500;
+    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+    transition-duration: 300ms;
 }
 
 .TwoColumnWithInput__btn{
-    
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-right: 0.5rem;
+    display: flex;
+    width: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    border-radius: 9999px;
+    --tw-bg-opacity: 1;
+    background-color: rgb(100 21 255 / var(--tw-bg-opacity));
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-weight: 700;
+    --tw-text-opacity: 1;
+    color: rgb(247 250 252 / var(--tw-text-opacity));
+    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+    transition-duration: 300ms;
 }
