--- a/style.css
+++ b/style.css
@@ -251,29 +251,22 @@ button, input, optgroup, select, textarea {
 
 .input__btn{
     position: relative;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 28rem;
-    padding: 15px 12px 17px 5px;
-    border: 2px solid #000000;
-    border-radius: 8px;
+    text-align: center;
 }
 
 .input__btn input{
     width: 100%;
     border-radius: 9999px;
     border-width: 2px;
-    /* padding: 20px 192px 20px 32px; */
     font-weight: 500;
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
     transition-duration: 300ms;
 }
 
 .btn__btn{
-    /* position: absolute;
-    border: 3px solid #4d2dec;
-    border-radius: 3px;
-    left: 136px;
-    top: 312px; */
-
     right: 0px;
     top: 0px;
     bottom: 0px;
@@ -298,7 +291,7 @@ button, input, optgroup, select, textarea {
     transition-duration: 300ms;
 }
 
-.TwoColumnWithInput__bttn{
+/* .TwoColumnWithInput__bttn{
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -340,7 +333,7 @@ button, input, optgroup, select, textarea {
     color: rgb(247 250 252 / var(--tw-text-opacity));
     transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
     transition-duration: 300ms;
-}
+} */
 
 .customer__logo p{
     font-size: 0.875rem;
