--- a/style.css
+++ b/style.css
@@ -377,6 +377,11 @@ button, input, optgroup, select, textarea {
     margin: 0 auto;
 }
 
+.row__container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
 /* Quality work */
 
 /* Get started */
