--- a/style.css
+++ b/style.css
@@ -291,50 +291,6 @@ button, input, optgroup, select, textarea {
     transition-duration: 300ms;
 }
 
-/* .TwoColumnWithInput__bttn{
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 28rem;
-    text-align: center;
-}
-
-.TwoColumnWithInput__input__btn{
-    width: 100%;
-    border-radius: 9999px;
-    border-width: 2px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    padding-left: 2rem;
-    font-weight: 500;
-    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
-    transition-duration: 300ms;
-}
-
-.TwoColumnWithInput__btn{
-    position: absolute;
-    right: -8px;
-    top: 0px;
-    bottom: 0px;
-    margin: 8px 15px 8px 0;
-    display: flex;
-    width: 40%;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    border-radius: 9999px;
-    --tw-bg-opacity: 1;
-    background-color: rgb(100 21 255 / var(--tw-bg-opacity));
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-weight: 700;
-    --tw-text-opacity: 1;
-    color: rgb(247 250 252 / var(--tw-text-opacity));
-    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
-    transition-duration: 300ms;
-} */
-
 .customer__logo p{
     font-size: 0.875rem;
     font-weight: 700;
@@ -407,32 +363,67 @@ button, input, optgroup, select, textarea {
 .services{
     display: flex;
     flex-wrap: wrap;
+    max-width: 24rem;
+}
+
+.service{
+    display: flex;
+    width: calc(100%/3);
+    flex-direction: row;
 }
 
 .sideimage__card{
     display: flex;
-    width: calc(100%/3);
+    /* flex-direction: row; */
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 2rem 0.5rem;
+    text-align: center;
+    margin: 0 16px;
+    padding: 32px 8px;
+}
+
+.imageContainer{
+    flex-shrink: 0;
+    border-radius: 9999px;
+    border-width: 1px;
+    padding: 20px;
+    text-align: center;
 }
 
 .textcontainer{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin: 8px 0 0 16px;
 }
-
-
-
 
 /* Quality work */
 
+
+
 /* Get started */
+
+
 
 /* Pricing */
 
+
+
 /* Testimonials */
+
+
 
 /* FAQs */
 
+
+
 /* Footer */
 
+
+
 /* Responsive */
+
