--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ a{
     border-color: transparent;
 }
 
+.fa-solid, .fas{
+    font-weight: 900;
+}
+
 /* section */
 
 .section{
@@ -83,9 +87,142 @@ a{
     filter: brightness(0.9);
 }
 
+header{
+    padding: 24px;
+}
+
 /* nav */
+.head__nav{
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    height: 70px;
+}
 
+.nav__logo{
+    display: flex;
+    align-items: center;
+}
 
+.nav__title{
+    font-size: 24px;
+    font-weight: 900;
+    color: #243e63;
+    color: inherit;
+    text-decoration: inherit;
+    transition: all 300ms ease;
+    margin-left: 16px;
+}
+
+.nav__logo:hover .nav__title{
+    color: #6415FF;
+}
+
+.nav__logo--img{
+    width: 40px;
+    height: 40px;
+}
+
+.nav__links{
+    display: flex;
+}
+
+.nav__link{
+    font-size: 14px;
+    color: #243e63;
+    margin: 0 24px;
+    padding: 0 0 4px;
+    font-weight: 700;
+}
+
+.nav__link--sub {
+    font-size: 14px;
+    font-weight: 700;
+    color: #243e63;
+    margin: 0 24px 0 48px;
+    padding: 0 0 4px;
+}
+
+.nav__link--primary{
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    padding: 12px 32px;
+    background-color: #6415FF;
+    border-radius: 9999px;
+    transition: all 300ms ease;
+}
+
+.btn__menu{
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #6415FF;
+    display: none;
+}
+
+/* hamburger */
+
+.menu__backdrop{
+    position: absolute;
+    background-color: #f7fafc;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    height: 50%;
+    border-radius: 10px;
+    visibility: hidden;
+    transition: opacity 300ms ease;
+}
+
+.btn__menu--close{
+    position: absolute;
+    right: 40px;
+    top: 10px;
+    padding: 8px;
+    color: #6415FF;
+}
+
+.btn__menu{
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #6415FF;
+    display: none;
+}
+
+.menu__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.menu__list{
+    padding: 10px;
+}
+
+.menu__link{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    border-bottom-width: 2px;
+    border-color: transparent;
+    padding-bottom: 0.25rem;
+    font-size: 1.125rem;
+    font-weight: 600;
+    letter-spacing: 0.025rem;
+}
 
 /* left column */
 
