--- a/style.css
+++ b/style.css
@@ -225,14 +225,98 @@ header{
 }
 
 /* left column */
+.container{
+    margin: 0 auto;
+    padding: 96px 0;
+}
 
+.head{
+    display: flex;
+    max-height: 100vh;
+    overflow: hidden;
+}
 
+.head__title{
+    font-size: 48px;
+    font-weight: 700;
+    color: #1a202c;
+    line-height: 1.25;
+}
 
-/* right column */
+.head__subtitle{
+    margin: 32px 0;
+    color: #243e63;
+    font-size: 18px;
+    line-height: 1.5;
+}
 
+.head__email--wrap{
+    max-width: 90%;
+}
 
+.head__email{
+    width: 100%;
+    border-radius: 9999px;
+    border-width: 2px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 20px;
+    font-size: 20px;
+    border-style: solid;
+    border-color: rgb(226, 232, 240);
+    transition: all 300ms ease;
+    outline-color: #6415FF;
+}
+
+.head__email--button{
+    border-radius: 9999px;
+    background-color: #6415FF;
+    color: #fff;
+    font-size: 20px;
+    border-style: none;
+    cursor: pointer;
+    padding: 16px;
+    font-weight: 500;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.head__customer{
+    margin-top: 5vw;
+}
+
+.head__customer--para{
+    color: #a0aec0;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.head__customer--wrap{
+    max-width: 100%;
+}
+
+.head__customer--img{
+    width: 50%;
+    opacity: 0.5;
+    margin-top: 16px;
+    padding-right: 20%;
+}
+
+.head__img--wrap{
+    min-width: 60%;
+}
+
+.head__img{
+    width: 100%;
+}
 
 /* Features */
+
+#features{
+    height: 100vh;
+}
+
 
 
 
