--- a/style.css
+++ b/style.css
@@ -4,103 +4,93 @@
 :root{
     --color-all: #6415FF;
     --title: #243e63;
+    --text-color: #a0aec0;
 }
 
-* {
+*{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Inter', sans-serif;
 }
 
-li {
+li{
     list-style: none;
-
 }
 
-a {
+a{
     text-decoration: inherit;
     color: inherit;
     border-color: transparent;
 }
 
-
-header {
+header{
     padding: 24px;
 }
 
-/*
-section
-*/
-.section__name {
+/* section */
+.section__name{
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 1.6px;
-    color: #6415FF;
-
+    color: var(--color-all);
 }
 
-.section__title {
+.section__title{
     text-align: center;
     font-size: 48px;
     font-weight: 900;
-    color: #243e63;
+    color: var(--title);
     letter-spacing: 1px;
 }
 
-.section__para {
+.section__para{
     color: #7c8ba1;
     font-size: 18px;
     max-width: 600px;
     margin: 0 auto;
     margin-top: 16px;
     line-height: 1.625;
-
 }
 
-.text--color {
-    color: #6415FF;
+.text--color{
+    color: var(--color-all);
 }
 
-.container {
+.container{
     padding: 80px 0;
 }
 
-.row {
+.row{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.section__button {
+.section__button{
     margin-top: 24px;
     padding: 12px 32px;
     border-radius: 9999px;
-    background-color: #6415FF;
+    background-color: var(--color-all);
     transition: all 300ms ease;
     border: none;
     display: block;
     width: fit-content;
-
 }
 
-.section__button--link {
+.section__button--link{
     color: #fff;
     font-weight: 500;
     font-size: 12px;
 }
 
-.section__button:hover {
+.section__button:hover{
     filter: brightness(0.9);
 }
 
-/* 
+/* nav */
 
-nav 
-
-*/
-
-.head__nav {
+.head__nav{
     display: flex;
     margin: 0 auto;
     align-items: center;
@@ -110,52 +100,51 @@ nav
     height: 70px;
 }
 
-.nav__logo {
+.nav__logo{
     display: flex;
     align-items: center;
 }
 
-.nav__title {
+.nav__title{
     font-size: 24px;
     font-weight: 900;
-    color: #243e63;
+    color: var(--title);
     color: inherit;
     text-decoration: inherit;
     transition: all 300ms ease;
     margin-left: 16px;
 }
 
-.nav__logo:hover .nav__title {
-    color: #6415FF;
+.nav__logo:hover .nav__title{
+    color: var(--color-all);
 }
 
-.nav__logo--img {
+.nav__logo--img{
     width: 40px;
     height: 40px;
-
 }
 
-.nav__links {
+.nav__links{
     display: flex;
 }
 
-.nav__link {
+.nav__link{
     font-size: 14px;
-    color: #243e63;
+    color: var(--title);
     margin: 0 24px;
     padding: 0 0 4px;
     font-weight: 700;
 }
 
-.nav__link:hover {
+.nav__link:hover{
     text-decoration: underline 1.5px;
 }
 
-.nav__link--sub:hover {
+.nav__link--sub:hover{
     text-decoration: underline 1.5px;
 }
 
-.nav__link--sub {
+.nav__link--sub{
     font-size: 14px;
     font-weight: 700;
     color: #243e63;
@@ -163,31 +152,30 @@ nav
     padding: 0 0 4px;
 }
 
-.nav__link--primary {
+.nav__link--primary{
     font-size: 14px;
     font-weight: 700;
     color: #fff;
     padding: 12px 32px;
-    background-color: #6415FF;
+    background-color: var(--color-all);
     border-radius: 9999px;
     transition: all 300ms ease;
 }
 
-.nav__link--primary:hover {
+.nav__link--primary:hover{
     filter: brightness(0.9);
 }
 
-.btn__menu {
+.btn__menu{
     background-color: transparent;
     font-size: 40px;
     text-align: center;
     border: none;
-    color: #6415FF;
+    color: var(--color-all);
     display: none;
-
 }
 
-.menu__backdrop {
+.menu__backdrop{
     position: absolute;
     background-color: #f7fafc;
     top: 0;
@@ -205,31 +193,31 @@ nav
     transition: opacity 300ms ease;
 }
 
-.menu--open .menu__backdrop {
+.menu--open .menu__backdrop{
     opacity: 1;
     visibility: visible;
 }
 
-.menu--open {
+.menu--open{
     overflow: hidden;
 }
 
-.btn__menu--close {
+.btn__menu--close{
     position: absolute;
     right: 40px;
     top: 10px;
     padding: 8px;
-    color: #6415FF;
+    color: var(--color-all);
 }
 
-.menu__links {
+.menu__links{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
 }
 
-.menu__link {
+.menu__link{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
     border-bottom-width: 2px;
@@ -240,59 +228,55 @@ nav
     letter-spacing: 0.025em;
 }
 
-.menu__list {
+.menu__list{
     padding: 10px;
 }
 
-/* 
+/* header */
 
-header  
-
-*/
-.container {
+.container{
     margin: 0 auto;
     padding: 96px 0;
 }
 
-.head {
+.head{
     display: flex;
     max-height: 100vh;
-    overflow: hidden
+    overflow: hidden;
 }
 
-.header__description {
+.header__description{
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.head__img--wrap {
+.head__img--wrap{
     min-width: 60%;
 }
 
-.head__img {
+.head__img{
     width: 100%;
 }
 
-.head__title {
+.head__title{
     font-size: 48px;
     font-weight: 700;
-    color: #1a202c;
+    color: var(--title);
     line-height: 1.25;
 }
 
-.head__subtitle {
+.head__subtitle{
     margin: 32px 0;
-    color: #243e63;
-    font-size: 18px;
-    line-height: 1.5;
+    color: var(--title);
+    font-size: 1.5;
 }
 
-.head__email--wrap {
+.head__email--wrap{
     max-width: 90%;
 }
 
-.head__email {
+.head__email{
     width: 100%;
     border-radius: 9999px;
     border-width: 2px;
@@ -303,16 +287,16 @@ header
     border-style: solid;
     border-color: rgb(226, 232, 240);
     transition: all 300ms ease;
-    outline-color: #6415FF;
+    outline-color: var(--color-all);
 }
 
-.head__email--wrap:hover .head__email {
+.head__email--wrap:hover .head__email{
     border-color: rgb(194, 195, 196);
 }
 
-.head__email--buttton {
+.head__email--button{
     border-radius: 9999px;
-    background-color: #6415FF;
+    background-color: var(--color-all);
     color: #fff;
     font-size: 20px;
     border-style: none;
@@ -323,37 +307,41 @@ header
     margin-top: 20px;
 }
 
-.head__email--buttton:hover {
+.head__email--button:hover{
     filter: brightness(0.9);
 }
 
-.head__customer--wrap {
+.head__customer--wrap{
     max-width: 100%;
 }
 
-.head__customer--img {
+.head__customer--wrap{
+    max-width: 100%;
+}
+
+.head__customer--img{
     width: 100%;
     opacity: 0.5;
     margin-top: 16px;
     padding-right: 20%;
 }
 
-.head__customer--para {
-    color: #a0aec0;
+.head__customer--para{
+    color: var(--text-color);
     font-size: 12px;
     text-transform: uppercase;
     font-weight: 700;
 }
 
-.head__customer {
+.head__customer{
     margin-top: 5vw;
 }
 
-/* 
 
-features 
 
-*/
+
+
+/* features */
 #features {
     height: 100vh;
 }
@@ -409,11 +397,7 @@ features
     color: #7c8ba1;
 }
 
-/*
-
-quality work
-
-*/
+/* quality work */
 
 #work {
     height: 100vh;
@@ -444,11 +428,7 @@ quality work
     width: 100%;
 }
 
-/* 
-
-step 
-
-*/
+/* step */
 .steps__container {
     display: flex;
     flex-direction: row;
@@ -510,11 +490,7 @@ step
     color: rgb(113 128 150);
 }
 
-/* 
-
-value 
-
-*/
+/* value */
 
 .value__description {
     max-width: 50%;
@@ -578,11 +554,7 @@ value
     max-width: 50%;
 }
 
-/* 
-
-pricing
-
-*/
+/* pricing */
 
 .pricing__name {
     text-align: center;
@@ -773,11 +745,7 @@ pricing
     font-size: 14px;
 }
 
-/* 
-
-footer
-
-*/
+/* footer */
 footer {
     background-color: #6415FF;
     height: 50vh;
@@ -855,17 +823,9 @@ footer {
 }
 
 
-/* 
-
-media queries
-
-*/
+/* media queries */
 
 @media (max-width: 992px) {
-
-
-
-
 
     .container {
         padding: 50px 0;
@@ -920,11 +880,7 @@ media queries
         width: 100%;
     }
 
-    /*
-    
-    featues
-    
-    */
+    /* featues */
     .features__service {
         width: 50%;
     }
@@ -937,11 +893,7 @@ media queries
         height: fit-content;
     }
 
-    /* 
-
-    plans
-
-    */
+    /* plans */
     .pricing__plans {
         display: flex;
         flex-direction: column;
@@ -969,11 +921,7 @@ media queries
     }
 
 
-    /*
-
-features
-
-*/
+    /* features */
 
     .features__service {
         width: 100%;
@@ -981,11 +929,7 @@ features
 
 
 
-    /* 
-
-    quality-work
-    
-    */
+    /* quality-work */
 
 
     #work {
@@ -1020,11 +964,7 @@ features
         margin-top: 20px;
     }
 
-    /*
-
-    STEPS
-
-    */
+    /* STEPS */
     #steps {
         height: fit-content;
     }
@@ -1064,11 +1004,7 @@ features
         text-align: center;
     }
 
-    /*
-    
-    values
-
-    */
+    /* values */
     #values {
         height: fit-content;
     }
@@ -1101,11 +1037,7 @@ features
         margin-bottom: 20px;
     }
 
-    /*
-
-    footer
-
-    */
+    /* footer */
 
     footer {
         height: fit-content;
