--- a/style.css
+++ b/style.css
@@ -411,111 +411,101 @@ header{
     max-width: 47%;
 }
 
-
-
-.work__title {
+.work__title{
     margin-top: 16px;
     text-align: left;
 }
 
-.work__img--wrap {
-    MAX-width: 50%;
+.work__img--wrap{
+    max-width: 50%;
 }
 
-.work__img {
+.work__img{
     width: 100%;
 }
 
-/* step */
-.steps__container {
+/* Step */
+
+.steps__container{
     display: flex;
     flex-direction: row;
 }
 
-.steps__img--wrap {
+.steps__img--wrap{
     max-width: 50%;
     display: flex;
-    align-items: center;
+    flex-direction: row;
 }
 
-.steps__img {
+.steps__img{
     width: 100%;
 }
 
-.steps__path--number {
+.steps__path--number{
     font-size: 36px;
-    color: #cbd5e0;
+    color: var(--text-color);
     font-weight: 600;
 }
 
-.steps__path {
+.steps__path{
     display: flex;
 }
 
-.steps__path--text {
-    display: flex;
-    flex-direction: column;
-    margin-left: 16px;
-}
-
-.steps__description {
+.steps__description{
     max-width: 50%;
     padding-left: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
-.steps__path {
+.steps__path{
     text-align: left;
     margin-top: 20px;
 }
 
-.steps__path--title {
+.steps__path--title{
     font-size: 20px;
     font-weight: 600;
     line-height: 1;
-
 }
 
-.steps__path--paragraph {
+.steps__path--paragraph{
     margin-top: 0.75rem;
     max-width: 20rem;
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 2;
-    color: rgb(113 128 150);
+    color: rgb(113, 128, 150);
 }
 
 /* value */
 
-.value__description {
+.value__description{
     max-width: 50%;
     padding-right: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
-.values__reasons {
+.values__reason{
     display: flex;
     justify-content: space-between;
 }
 
-.values__reason {
+.values__reason{
     width: 48%;
 }
 
-.values__reasons--head {
+.values__reasons--head{
     display: flex;
     align-items: center;
     flex-direction: row;
 }
 
 .dollar,
-.briefcase {
+.briefcase{
     border-radius: 999px;
     display: inline-block;
     align-content: center;
@@ -523,54 +513,56 @@ header{
     margin: 10px;
 }
 
-.dollar {
+.dollar{
     padding: 7.5px 12.3px;
     background-color: #9ae6b4;
     color: green;
 }
 
-.briefcase {
+.briefcase{
     padding: 8px 12.3px;
     background-color: #feb2b2;
-    color: rgba(255, 0, 0, 0.738);
+    color: rgb(255, 0, 0, 0.738);
 }
 
-.values__reason--paragraph {
+.values__reason--paragraph{
     margin-top: 1rem;
     text-align: left;
     line-height: 1.625;
-    color: rgb(113 128 150);
+    color: rgb(113, 128, 150);
 }
 
-.values__img {
+.values__reason--title{
+
+}
+
+.values__img{
     width: 100%;
 }
 
-.values__img--wrap {
+.values__img--wrap{
     display: flex;
     align-items: center;
     max-width: 50%;
 }
 
-/* pricing */
+/* Pricing */
 
-.pricing__name {
+.pricing__name{
     text-align: center;
 }
 
-.pricing__plans {
+.pricing__plans{
     display: flex;
     flex-wrap: wrap;
     max-width: 1200px;
     margin: 0 auto;
     padding-top: 40px;
-    display: flex;
     justify-content: space-between;
-
 }
 
-.pricing__plan {
-    width: calc(98% / 3);
+.pricing__plan{
+    width: calc(98%/3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -579,8 +571,8 @@ header{
     border-radius: 10px;
 }
 
-.pricing__plan2 {
-    width: calc(98% / 3);
+.pricing__plan2{
+    width: calc(98%/3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -590,53 +582,49 @@ header{
     background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);
 }
 
-.pricing__plan--description {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    text-transform: uppercase;
-    line-height: 1.625;
-    text-align: center;
-}
+.pricing__description{
 
-.pricing__plan--title1 {
+} 
+
+.pricing__plan--title1{
     font-size: 1.25rem;
     font-weight: 700;
 }
 
-.pricing__plan--price1 {
+.pricing__plan--price1{
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     font-size: 2.25rem;
     font-weight: 700;
 }
 
-.pricing__plan--title2 {
+.pricing__plan--title2{
     font-size: 1.25rem;
     font-weight: 700;
-    color: #fff
+    color: #fff;
 }
 
-.pricing__plan--price2 {
+.pricing__plan--price2{
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
     font-size: 2.25rem;
     font-weight: 700;
-    color: #fff
-}
+    color: #fff;
+} 
 
-.pricing__plan--text1 {
+.pricing__plan--text1{
     font-weight: 700;
     letter-spacing: 0.1em;
-    color: rgb(160 174 192)
-}
+    color: rgb(160, 174, 192);
+} 
 
-.pricing__plan--text2 {
+.pricing__plan--text2{
     font-weight: 700;
     letter-spacing: 0.1em;
-    color: #fff
-}
+    color: #fff;
+} 
 
-.pricing__plan--top1 {
+.pricing__plan--top1{
     height: 0.5rem;
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
     width: 100%;
@@ -644,14 +632,14 @@ header{
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--top2 {
+.pricing__plan--top2{
     height: 0.5rem;
     width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--top3 {
+.pricing__plan--top3{
     height: 0.5rem;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
     width: 100%;
@@ -659,7 +647,7 @@ header{
     border-top-right-radius: 10px;
 }
 
-.pricing__plan--benefits {
+.pricing__plan--benefits{
     border-bottom: solid 2px rgb(226, 232, 240);
     border-top: solid 2px rgb(226, 232, 240);
     width: 100%;
@@ -668,32 +656,32 @@ header{
     text-align: center;
 }
 
-.pricing__plan--subtitle1 {
+.pricing__plan--subtitle1{
     padding-top: 32px;
 }
 
-.pricing__plan--subtitle2 {
+.pricing__plan--subtitle2{
     padding-top: 32px;
     color: #fff;
 }
 
-.pricing__plan--benefit {
+.pricing__plan--benefit{
     margin-top: 1.25rem;
     font-weight: 500;
-    color: rgb(160 174 192);
+    color: rgb(160, 174, 192);
 }
 
-.pricing__plan--benefit2 {
+.pricing__plan--benefits2{
     margin-top: 1.25rem;
     font-weight: 500;
     color: #fff;
 }
 
-.pricing__plan--list {
+.pricing__plan--list{
     padding-bottom: 32px;
 }
 
-.pricing__plan--button {
+.pricing__plan--button{
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -705,7 +693,7 @@ header{
     background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
 }
 
-.pricing__plan--button2 {
+.pricing__plan--button2{
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -714,37 +702,38 @@ header{
     letter-spacing: 0.05em;
     padding: 16px 32px;
     border: none;
-    background: #fff
+    background: #fff;
 }
 
-.pricing__plan--button3 {
+.pricing__plan--button3{
     border-radius: 9999px;
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 0.875rem;
     text-transform: uppercase;
-    letter-spacing: 0.05em;
+    letter-spacing: 0.005em;
     padding: 16px 32px;
     border: none;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
 }
 
-.pricing__plan--links {
+.pricing__plan--links{
     padding: 20px 16px;
 }
 
-.pricing__plan--link {
+.pricing__plan--link{
     color: #f7fafc;
     font-size: 14px;
 }
 
-.pricing__plan--link2 {
-    color: #6415FF;
+.pricing__plan--link2{
+    color: var(--color-all);
     font-size: 14px;
-}
+} 
+
 
 /* footer */
-footer {
+/* footer {
     background-color: #6415FF;
     height: 50vh;
     padding: 50px;
@@ -818,7 +807,7 @@ footer {
     padding: 8px;
     font-size: 20px;
     color: #fff;
-}
+} */
 
 
 /* media queries */
