Updated css file

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ a {
     border-color: transparent;
 }
 
-
 header {
     padding: 24px;
 }
@@ -397,7 +396,7 @@ header {
     color: #7c8ba1;
 }
 
-/* Quality work */
+/* quality work */
 
 #work {
     height: 100vh;
