--- a/style.css
+++ b/style.css
@@ -126,7 +126,6 @@ header {
 .nav__logo--img {
     width: 40px;
     height: 40px;
-
 }
 
 .nav__links {
@@ -399,7 +398,7 @@ header {
 /* quality work */
 
 #work {
-    height: 100vh;
+    height: 55vh;
 }
 
 .work__container {
@@ -407,7 +406,6 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
 }
 
 .work__title {
@@ -420,7 +418,7 @@ header {
 }
 
 .work__img--wrap {
-    MAX-width: 50%;
+    max-width: 50%;
 }
 
 .work__img {
